tests/unit/compile/cases/syntax-errors/11.html-tag-mismatch.t
Lorem <div> ipsum <span> dolor </div> sit </span> amet
---- THROW% ----
Unexpected closing tag `</div>` instead of expected `</span>` near `> dolor </div> sit </span> ame`
